--- a/sambaqui.html
+++ b/sambaqui.html
@@ -176,28 +176,28 @@
 
     <h2 class="all"><strong>povo que vivia no Sambaqui era da espécie Homo Sapiens? Explique.</strong></h2>
     <br>
-    <p class="all">Eles eram Homo Sapiens, por que tem relatos a partir de que o primeiro sambaqui foi “construído” em
+    <p class="SambaquiLetra">Eles eram Homo Sapiens, por que tem relatos a partir de que o primeiro sambaqui foi “construído” em
       aproximadamente 9 mil anos atrás, e tem relatos de homo sapiens entre 350 mil e 200 mil anos atrás, então
       certamente são Homo Sapiens (Tiradas das aulas do Professor Ivan Furmann).</p>
       <br>
     <h2><strong>"Como esse povo chegou até a América? E, pelos elementos que existem
       na arqueologia, quando habitaram a região da Baía da Babitonga?"</strong></h2>
       <br>
-    <p>Como apresentado pelo Professor Ivan, este povo possuía traços extremamente asiáticos, tendo muita similaridade com os povos originários, popularmente chamados de Índios. Por este motivo e também por datação arqueológica, é muito teorizado que o povo sambaqui tenha vindo pelo Estreito de Bering. Já a duração Sambaquis é de aproximadamente é 3 mil à 5 mil anos atrás</p>
+    <p class="SambaquiLetra">Como apresentado pelo Professor Ivan, este povo possuía traços extremamente asiáticos, tendo muita similaridade com os povos originários, popularmente chamados de Índios. Por este motivo e também por datação arqueológica, é muito teorizado que o povo sambaqui tenha vindo pelo Estreito de Bering. Já a duração Sambaquis é de aproximadamente é 3 mil à 5 mil anos atrás</p>
     <br>
     <h2><strong>"Qual era a principal fonte de alimentação deles? Como se sabe essa
       informação?"</strong></h2>
       <br>
-      <p> A principal fonte era a pesca, porque eles viviam em áreas costeiras próximas ao mar. Eu sei dessa informação pois o professor Ivan Furmann e a monitora e pesquisadora Ana Claudia Bruhmuller, falaram sobre isso na visita do museu do sambaqui em Joinville, e foi explicado na aula de história com o Professor Ivan Furmann.</p>
+      <p class="SambaquiLetra"> A principal fonte era a pesca, porque eles viviam em áreas costeiras próximas ao mar. Eu sei dessa informação pois o professor Ivan Furmann e a monitora e pesquisadora Ana Claudia Bruhmuller, falaram sobre isso na visita do museu do sambaqui em Joinville, e foi explicado na aula de história com o Professor Ivan Furmann.</p>
       <br>
-      <p>Figura 2</p>
+      <p class="SambaquiLetra">Figura 2</p>
       <img src="Imagens/sambaqui img2.jpeg" width="70%" alt="sambaqui figura 2">
       <br>
       <h2><strong>"O que é um zoólito: Explique e apresente alguma foto que contenha um
         exemplo de um deles."</strong></h2>
-        <p>Os Zoólitos são esculturas talhadas em pedra, elas têm valor arqueológico e artístico.</p>
+        <p class="SambaquiLetra">Os Zoólitos são esculturas talhadas em pedra, elas têm valor arqueológico e artístico.</p>
         <br>
-        <p>Figura 3- Zoólitos</p>
+        <p class="SambaquiLetra">Figura 3- Zoólitos</p>
         <br>
         <img src="Imagens/sambaqui img3.jpeg" width="70%" alt="figura 3" >
     </div>
