--- a/sambaqui.html
+++ b/sambaqui.html
@@ -14,7 +14,9 @@
 
 <body>
   <div class="cabeçalho">
-    <a href="index.html"> <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1></a>
+    <a href="index.html">
+      <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
+    </a>
 
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
@@ -143,7 +145,7 @@
     <div id="main">
       <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
         </div></span>
- </div>
+    </div>
   </div>
   <div>
 
@@ -153,53 +155,95 @@
       }
     </style>
     <div>
-    <h1 class="all"><strong>Sambaqui</strong></h1>
-    <br>
-    <h2 class="all"><strong>“O que é Sambaqui?”</strong></h2>
-    <br>
-    <p class="all">Sambaqui é uma variação de origem tupi, sambaquis são amontoados de conchas usado como ritual de
-      sepultamento entre outras coisas, os sambaquis podem ser encontrados ao longo do litoral nordestino, no Rio de
-      Janeiro, em São Paulo, e em outras partes do litoral gaúcho.</p>
-    <br>
-    <h2 class="all"><strong>"Localização dos Sambaquis em nossa região “Deve conter mapa com
-        indicação de ao menos 5 locais onde se encontram sambaquis. Pode ser
-        tanto de Joinville, ou Araquari, ou São Francisco do sul ou Barra do Sul,
-        etc.”</strong></h2>
-
-
-    <p class="all">Figura 1 – Mapa dos sambaquis</p>
-
-
-    <img class="all" src="Imagens/imagem1 sambaqui.jpeg" width="70%" alt="foto mapa">
-    <br>
-
-
-    <h2 class="all"><strong>povo que vivia no Sambaqui era da espécie Homo Sapiens? Explique.</strong></h2>
-    <br>
-    <p class="SambaquiLetra">Eles eram Homo Sapiens, por que tem relatos a partir de que o primeiro sambaqui foi “construído” em
-      aproximadamente 9 mil anos atrás, e tem relatos de homo sapiens entre 350 mil e 200 mil anos atrás, então
-      certamente são Homo Sapiens (Tiradas das aulas do Professor Ivan Furmann).</p>
+      <h1 class="all"><strong>Sambaqui</strong></h1>
       <br>
-    <h2><strong>"Como esse povo chegou até a América? E, pelos elementos que existem
-      na arqueologia, quando habitaram a região da Baía da Babitonga?"</strong></h2>
+      <h2 class="all"><strong>“O que é Sambaqui?”</strong></h2>
       <br>
-    <p class="SambaquiLetra">Como apresentado pelo Professor Ivan, este povo possuía traços extremamente asiáticos, tendo muita similaridade com os povos originários, popularmente chamados de Índios. Por este motivo e também por datação arqueológica, é muito teorizado que o povo sambaqui tenha vindo pelo Estreito de Bering. Já a duração Sambaquis é de aproximadamente é 3 mil à 5 mil anos atrás</p>
-    <br>
-    <h2><strong>"Qual era a principal fonte de alimentação deles? Como se sabe essa
-      informação?"</strong></h2>
+      <p class="all">Sambaqui é uma variação de origem tupi, sambaquis são amontoados de conchas usado como ritual de
+        sepultamento entre outras coisas, os sambaquis podem ser encontrados ao longo do litoral nordestino, no Rio de
+        Janeiro, em São Paulo, e em outras partes do litoral gaúcho.</p>
       <br>
-      <p class="SambaquiLetra"> A principal fonte era a pesca, porque eles viviam em áreas costeiras próximas ao mar. Eu sei dessa informação pois o professor Ivan Furmann e a monitora e pesquisadora Ana Claudia Bruhmuller, falaram sobre isso na visita do museu do sambaqui em Joinville, e foi explicado na aula de história com o Professor Ivan Furmann.</p>
+      <h2 class="all"><strong>"Localização dos Sambaquis em nossa região “Deve conter mapa com
+          indicação de ao menos 5 locais onde se encontram sambaquis. Pode ser
+          tanto de Joinville, ou Araquari, ou São Francisco do sul ou Barra do Sul,
+          etc.”</strong></h2>
+
+
+      <p class="all">Figura 1 – Mapa dos sambaquis</p>
+
+
+      <img class="all" src="Imagens/imagem1 sambaqui.jpeg" width="70%" alt="foto mapa">
+      <p class="SambaquiLetras">Dos autores, 2023</p>
       <br>
-      <p class="SambaquiLetra">Figura 2</p>
+      <h2 class="all"><strong>povo que vivia no Sambaqui era da espécie Homo Sapiens? Explique.</strong></h2>
+      <br>
+      <p class="SambaquiLetra">Eles eram Homo Sapiens, por que tem relatos a partir de que o primeiro sambaqui foi
+        “construído” em
+        aproximadamente 9 mil anos atrás, e tem relatos de homo sapiens entre 350 mil e 200 mil anos atrás, então
+        certamente são Homo Sapiens (Tiradas das aulas do Professor Ivan Furmann).</p>
+      <br>
+      <h2><strong>"Como esse povo chegou até a América? E, pelos elementos que existem
+          na arqueologia, quando habitaram a região da Baía da Babitonga?"</strong></h2>
+      <br>
+      <p class="SambaquiLetra">Como apresentado pelo Professor Ivan, este povo possuía traços extremamente asiáticos,
+        tendo muita similaridade com os povos originários, popularmente chamados de Índios. Por este motivo e também por
+        datação arqueológica, é muito teorizado que o povo sambaqui tenha vindo pelo Estreito de Bering. Já a duração
+        Sambaquis é de aproximadamente é 3 mil à 5 mil anos atrás</p>
+      <br>
+      <h2><strong>"Qual era a principal fonte de alimentação deles? Como se sabe essa
+          informação?"</strong></h2>
+      <br>
+      <p class="SambaquiLetra"> A principal fonte era a pesca, porque eles viviam em áreas costeiras próximas ao mar. Eu
+        sei dessa informação pois o professor Ivan Furmann e a monitora e pesquisadora Ana Claudia Bruhmuller, falaram
+        sobre isso na visita do museu do sambaqui em Joinville, e foi explicado na aula de história com o Professor Ivan
+        Furmann.</p>
+      <br>
+      <p class="SambaquiLetra">Figura 2- alimentação</p>
       <img src="Imagens/sambaqui img2.jpeg" width="70%" alt="sambaqui figura 2">
+      <p class="SambaquiLetras">Dos autores, 2023</p>
       <br>
       <h2><strong>"O que é um zoólito: Explique e apresente alguma foto que contenha um
-        exemplo de um deles."</strong></h2>
-        <p class="SambaquiLetra">Os Zoólitos são esculturas talhadas em pedra, elas têm valor arqueológico e artístico.</p>
+          exemplo de um deles."</strong></h2>
+      <p class="SambaquiLetra">Os Zoólitos são esculturas talhadas em pedra, elas têm valor arqueológico e artístico.
+      </p>
+      <br>
+      <p class="SambaquiLetra">Figura 3- Zoólitos</p>
+      <br>
+      <img src="Imagens/sambaqui img3.jpeg" width="70%" alt="figura 3">
+      <p class="SambaquiLetras">Dos autores, 2023</p>
+      <br>
+      <h2><strong> Todo sambaqui contém sepultamentos?</strong></h2>
+      <br>
+      <p class="SambaquiLetra">Arqueologicamente já foram encontrados restos alimentares, ferramentas, armas, adornos e
+        sepultamentos dos que viveram ali. Então sim contém sepultamentos. (SAMBAQUIS - ARQUEOLOGIA BRASILEIRA. [s. d.].
+        Museu Nacional - UFRJ, 2023).</p>
+      <br>
+      <p class="SambaquiLetras"> Figura 4 - sepultamentos</p>
+      <img src="Imagens/Sambaqui img4.jpeg" alt="Figura sepultamento" width="70%">
+      <p class="SambaquiLetras">Dos autores, 2023</p>
+      <br>
+      <h2><strong> Existem outras partes do Brasil e do Mundo que contenham construções
+        humanas parecidas com as dos Sambaquis da região da Baía da
+        Babitonga? </strong></h2>
         <br>
-        <p class="SambaquiLetra">Figura 3- Zoólitos</p>
+        <p class="SambaquiLetra">Sim, em várias regiões costeiras pelo mundo como desde a Austrália e Nova Zelândia e outras ilhas da Oceania à África, América do Norte e Europa e geralmente são chamados de “shell mound” ou “shell middens” . Já no Brasil, além da região da Baía da Babitonga, temos nas regiões costeiras do sudeste brasileiro como nos estados do Rio de Janeiro e São Paulo, assim como mais ao sul, em Santa Catarina e Paraná principalmente. (DE CASTILHO, Pedro V, 2008)</p>
         <br>
-        <img src="Imagens/sambaqui img3.jpeg" width="70%" alt="figura 3" >
+        <p class="SambaquiLetras"> Figura 5 - amontoados de conchas no mundo</p>
+        <img src="Imagens/Sambaqui img5.jpeg" alt="Figura 5" width="70%">
+        <p class="SambaquiLetras">Dos autores, 2023</p>
+        <br>
+        <h2><strong> Todos os sambaquis encontrados estão intactos ou alguns já foram
+          destruídos? Como isso aconteceu?</strong></h2>
+          <br>
+          <p class="SambaquiLetras">Segundo Ana Claudia Bruhmuller, alguns já foram destruídos, outros intactos, pois teve a exploração descuidada, alguns por causa natural de desastres, e outros por causa de destruição sem consentimento que aquilo era um sambaqui, etc.</p>
+          <br>
+          <p class="SambaquiLetras">Figura 7- Preservação do patrimônio arqueológico</p>
+          <img src="Imagens/Sambaqui img6.jpeg" alt="Figura 7" width="70%">
+          <p class="SambaquiLetras">Dos autores, 2023</p>
+          <br>
+          <h2><strong>Qual a importância de preservar os sambaquis?</strong></h2>
+          <br>
+          <p class="SambaquiLetras"> A importância da preservação dos sambaquis vem de questão histórica e cultural, preservar dados de um povo antigo afins sociais e arqueológicos.</p>
     </div>
     <div class="rodape"></div>
 
