--- a/sambaqui.html
+++ b/sambaqui.html
@@ -210,7 +210,7 @@
       <p class="SambaquiLetra">Figura 3- Zoólitos</p>
       <br>
       <img src="Imagens/sambaqui img3.jpeg" width="70%" alt="figura 3">
-      <p class="SambaquiLetras">Dos autores, 2023</p>
+      <p class="SambaquiLetra">Dos autores, 2023</p>
       <br>
       <h2><strong> Todo sambaqui contém sepultamentos?</strong></h2>
       <br>
@@ -218,7 +218,7 @@
         sepultamentos dos que viveram ali. Então sim contém sepultamentos. (SAMBAQUIS - ARQUEOLOGIA BRASILEIRA. [s. d.].
         Museu Nacional - UFRJ, 2023).</p>
       <br>
-      <p class="SambaquiLetras"> Figura 4 - sepultamentos</p>
+      <p class="SambaquiLetra"> Figura 4 - sepultamentos</p>
       <img src="Imagens/Sambaqui img4.jpeg" alt="Figura sepultamento" width="70%">
       <p class="SambaquiLetras">Dos autores, 2023</p>
       <br>
@@ -228,22 +228,22 @@
         <br>
         <p class="SambaquiLetra">Sim, em várias regiões costeiras pelo mundo como desde a Austrália e Nova Zelândia e outras ilhas da Oceania à África, América do Norte e Europa e geralmente são chamados de “shell mound” ou “shell middens” . Já no Brasil, além da região da Baía da Babitonga, temos nas regiões costeiras do sudeste brasileiro como nos estados do Rio de Janeiro e São Paulo, assim como mais ao sul, em Santa Catarina e Paraná principalmente. (DE CASTILHO, Pedro V, 2008)</p>
         <br>
-        <p class="SambaquiLetras"> Figura 5 - amontoados de conchas no mundo</p>
+        <p class="SambaquiLetra"> Figura 5 - amontoados de conchas no mundo</p>
         <img src="Imagens/Sambaqui img5.jpeg" alt="Figura 5" width="70%">
         <p class="SambaquiLetras">Dos autores, 2023</p>
         <br>
         <h2><strong> Todos os sambaquis encontrados estão intactos ou alguns já foram
           destruídos? Como isso aconteceu?</strong></h2>
           <br>
-          <p class="SambaquiLetras">Segundo Ana Claudia Bruhmuller, alguns já foram destruídos, outros intactos, pois teve a exploração descuidada, alguns por causa natural de desastres, e outros por causa de destruição sem consentimento que aquilo era um sambaqui, etc.</p>
+          <p class="SambaquiLetra">Segundo Ana Claudia Bruhmuller, alguns já foram destruídos, outros intactos, pois teve a exploração descuidada, alguns por causa natural de desastres, e outros por causa de destruição sem consentimento que aquilo era um sambaqui, etc.</p>
           <br>
-          <p class="SambaquiLetras">Figura 7- Preservação do patrimônio arqueológico</p>
+          <p class="SambaquiLetra">Figura 7- Preservação do patrimônio arqueológico</p>
           <img src="Imagens/Sambaqui img6.jpeg" alt="Figura 7" width="70%">
           <p class="SambaquiLetras">Dos autores, 2023</p>
           <br>
           <h2><strong>Qual a importância de preservar os sambaquis?</strong></h2>
           <br>
-          <p class="SambaquiLetras"> A importância da preservação dos sambaquis vem de questão histórica e cultural, preservar dados de um povo antigo afins sociais e arqueológicos.</p>
+          <p class="SambaquiLetra"> A importância da preservação dos sambaquis vem de questão histórica e cultural, preservar dados de um povo antigo afins sociais e arqueológicos.</p>
     </div>
     <div class="rodape"></div>
 
