--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="cabeçalho">
-    <a href="index.html"> <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1></a>
+    <a href="index.html"> <h1 class="center"><strong class="cabeça"> Física Na Mente </strong></h1></a>
 
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
@@ -144,33 +144,27 @@
         </div></span>
  </div>
   </div>
-<div class="parteIndex">
+<div class="parteIndex" style="margin-top: 10cm;">
   <h1>Física Na Mente</h1>
-  <h2> O melhor site para você aprender Física</h2>
+  <br>
+  <h1> O melhor site para você aprender Física</h1>
+  <div id="center">
+    <br>
   <a href="Leis De Newton.html">
     <button type="button" class="btn">
       <strong>Leis de Newton</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
-
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
     </button></a>
+  </div>
+
+  <br>
+
     <a href="Leis De Newton.html">
       <button type="button" class="btn">
         <strong>Leis de Newton</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
+      </button></a></div>
+    </div>
+
 </div>
 
    
