--- a/sambaqui.html
+++ b/sambaqui.html
@@ -154,12 +154,12 @@
         text-align: center;
       }
     </style>
-    <div>
+    <div class="conteudo">
       <h1 class="all"><strong>Sambaqui</strong></h1>
       <br>
       <h2 class="all"><strong>“O que é Sambaqui?”</strong></h2>
       <br>
-      <p class="all">Sambaqui é uma variação de origem tupi, sambaquis são amontoados de conchas usado como ritual de
+      <p class="SambaquiLetra">Sambaqui é uma variação de origem tupi, sambaquis são amontoados de conchas usado como ritual de
         sepultamento entre outras coisas, os sambaquis podem ser encontrados ao longo do litoral nordestino, no Rio de
         Janeiro, em São Paulo, e em outras partes do litoral gaúcho.</p>
       <br>
