--- a/sambaqui.html
+++ b/sambaqui.html
@@ -172,7 +172,7 @@
       <p class="all">Figura 1 – Mapa dos sambaquis</p>
 
 
-      <img class="all" src="Imagens/imagem1 sambaqui.jpeg" width="70%" alt="foto mapa">
+      <img class="alight" class="all" src="Imagens/imagem1 sambaqui.jpeg" width="70%" alt="foto mapa">
       <p class="SambaquiLetras">Dos autores, 2023</p>
       <br>
       <h2 class="all"><strong>povo que vivia no Sambaqui era da espécie Homo Sapiens? Explique.</strong></h2>
@@ -199,7 +199,7 @@
         Furmann.</p>
       <br>
       <p class="SambaquiLetra">Figura 2- alimentação</p>
-      <img src="Imagens/sambaqui img2.jpeg" width="70%" alt="sambaqui figura 2">
+      <img class="alight" src="Imagens/sambaqui img2.jpeg" width="70%" alt="sambaqui figura 2">
       <p class="SambaquiLetras">Dos autores, 2023</p>
       <br>
       <h2><strong>"O que é um zoólito: Explique e apresente alguma foto que contenha um
@@ -209,7 +209,7 @@
       <br>
       <p class="SambaquiLetra">Figura 3- Zoólitos</p>
       <br>
-      <img src="Imagens/sambaqui img3.jpeg" width="70%" alt="figura 3">
+      <img class="alight" src="Imagens/sambaqui img3.jpeg" width="70%" alt="figura 3">
       <p class="SambaquiLetra">Dos autores, 2023</p>
       <br>
       <h2><strong> Todo sambaqui contém sepultamentos?</strong></h2>
@@ -219,7 +219,7 @@
         Museu Nacional - UFRJ, 2023).</p>
       <br>
       <p class="SambaquiLetra"> Figura 4 - sepultamentos</p>
-      <img src="Imagens/Sambaqui img4.jpeg" alt="Figura sepultamento" width="70%">
+      <img class="alight" src="Imagens/Sambaqui img4.jpeg" alt="Figura sepultamento" width="70%">
       <p class="SambaquiLetras">Dos autores, 2023</p>
       <br>
       <h2><strong> Existem outras partes do Brasil e do Mundo que contenham construções
@@ -229,7 +229,7 @@
         <p class="SambaquiLetra">Sim, em várias regiões costeiras pelo mundo como desde a Austrália e Nova Zelândia e outras ilhas da Oceania à África, América do Norte e Europa e geralmente são chamados de “shell mound” ou “shell middens” . Já no Brasil, além da região da Baía da Babitonga, temos nas regiões costeiras do sudeste brasileiro como nos estados do Rio de Janeiro e São Paulo, assim como mais ao sul, em Santa Catarina e Paraná principalmente. (DE CASTILHO, Pedro V, 2008)</p>
         <br>
         <p class="SambaquiLetra"> Figura 5 - amontoados de conchas no mundo</p>
-        <img src="Imagens/Sambaqui img5.jpeg" alt="Figura 5" width="70%">
+        <img class="alight" src="Imagens/Sambaqui img5.jpeg" alt="Figura 5" width="70%">
         <p class="SambaquiLetras">Dos autores, 2023</p>
         <br>
         <h2><strong> Todos os sambaquis encontrados estão intactos ou alguns já foram
@@ -238,7 +238,7 @@
           <p class="SambaquiLetra">Segundo Ana Claudia Bruhmuller, alguns já foram destruídos, outros intactos, pois teve a exploração descuidada, alguns por causa natural de desastres, e outros por causa de destruição sem consentimento que aquilo era um sambaqui, etc.</p>
           <br>
           <p class="SambaquiLetra">Figura 7- Preservação do patrimônio arqueológico</p>
-          <img src="Imagens/Sambaqui img6.jpeg" alt="Figura 7" width="70%">
+          <img class="alight" src="Imagens/Sambaqui img6.jpeg" alt="Figura 7" width="70%" >
           <p class="SambaquiLetras">Dos autores, 2023</p>
           <br>
           <h2><strong>Qual a importância de preservar os sambaquis?</strong></h2>
