Atualizações na barra lateral

--- a/Bibliografia.html
+++ b/Bibliografia.html
@@ -14,7 +14,9 @@
 
 <body>
   <div class="cabeçalho">
-    <a href="index.html"> <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1></a>
+    <div class="center">
+    <a href="index.html"> <h1 class="center"><strong class="cabeça"> Física Na Mente </strong></h1></a>
+  </div>
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
 <h1 style="text-align: center;">Tópicos</h1>
