--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
             <div class="circle"></div>
           </div>
         </button></a>
+        <br>
     </div>
 
     <div id="main">
@@ -144,27 +145,26 @@
         </div></span>
  </div>
   </div>
-<div class="parteIndex" style="margin-top: 10cm;">
+
+  
+<div class="parteIndex">
   <h1>Física Na Mente</h1>
   <br>
   <h1> O melhor site para você aprender Física</h1>
   <div id="center">
     <br>
   <a href="Leis De Newton.html">
-    <button type="button" class="btn">
+    <button type="button" class="btn1">
       <strong>Leis de Newton</strong>
     </button></a>
   </div>
-
   <br>
-
     <a href="Leis De Newton.html">
-      <button type="button" class="btn">
+      <button type="button" class="btn1">
         <strong>Leis de Newton</strong>
 
       </button></a></div>
     </div>
-
 </div>
 
    
