Atualizações no Index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
   <div class="cabeçalho">
-    <a href="index.html"> <h1 class="center"><strong class="cabeça"> Física Na Mente </strong></h1></a>
+    <a href="index.html">
+      <h1 class="center"><strong class="cabeca"> Física Na Mente </strong></h1>
+    </a>
 
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
@@ -137,37 +139,92 @@
             <div class="circle"></div>
           </div>
         </button></a>
-        <br>
+      <br>
     </div>
 
     <div id="main">
       <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
         </div></span>
- </div>
+    </div>
   </div>
 
-  
-<div class="parteIndex">
-  <h1>Física Na Mente</h1>
-  <br>
-  <h1> O melhor site para você aprender Física</h1>
-  <div id="center">
+
+  <div class="parteIndex">
+    <h1 style="font-size: 90px;">Física Na Mente</h1>
     <br>
-  <a href="Leis De Newton.html">
-    <button type="button" class="btn1">
-      <strong>Leis de Newton</strong>
-    </button></a>
-  </div>
-  <br>
+    <h1 style="font-size: 70px;"> O Melhor Site Para Você Aprender Física</h1>
+    <div id="center">
+      <br>
+      <a href="Leis De Newton.html">
+        <button type="button" class="btn1" style="width: 300px;">
+          <strong style="font-size: 20px;">Definição de Física</strong>
+        </button></a>
+    </div>
+    <br>
     <a href="Leis De Newton.html">
       <button type="button" class="btn1">
-        <strong>Leis de Newton</strong>
+        <strong>Saiba Mais</strong>
 
-      </button></a></div>
+      </button></a>
+  </div>
+  </div>
+  <br><br><br><br><br><br><br><br><br><br>
+  </div>
+  <div class="caixas" style="display: flex;">
+    <div id="caixa1">
+      <strong class="cabeca1">Porque Você Deve Estudar Física?</strong>
+      <br>
+      <br>
+      <p class="caixas">Primeira é pra não ser idiota, e segundo porque a física é muito massa</p>
     </div>
-</div>
-
-   
+    <div id="caixa2">
+      <strong class="cabeca1"> Quais os Principais Assuntos do Site?</strong>
+      <br><br>
+      <p class="caixas">Ondas</p>
+      <p class="caixas">Leis de Newton</p>
+      <p class="caixas">Energia</p>
+      <p class="caixas">Mecanica</p>
+      <p class="caixas">Eletricidade</p>
+      <p class="caixas">Correntes Eletricas</p>
+      <p class="caixas">TermoFísica</p>
+      <p class="caixas">Optica</p>
+    </div>
+    <div id="caixa3"><strong class="cabeca1">So pra encher linguiça</strong></div>
+    <div id="caixa4"><strong class="cabeca1">Quem Fez o Site?</strong>
+      <br><br>
+      <p class="caixas">
+        Anthony Gabriel
+      </p>
+      <p class="caixas">
+        Claudio Anzini
+      </p>
+      <p class="caixas">
+        Gustavo Kruger
+      </p>
+      <p class="caixas">
+        Pedro Hen Malaquias
+      </p>
+    </div>
+  </div>
+  <br><br><br><br><br><br>
   <br>
+  <div class="imagemEs">
+    <div class="texto1">
+       <img src="Imagens/einsten.gif" alt="" style="border: none;  margin-left: 2cm;">
+     <h1> <strong class="cabeca"> Vou te mostrar que Fisica não é chata! </strong>
+    <p>ESCREVER ALGO AQUI</p>
+    </h1>
+    </div>
+    <br>
+    <div class="imagemDi">
+      <div class="texto2">
+        
+        <h1><strong class="cabeca">OLA OLA</strong></h1>
+
+      </div>
+    </div>
+  </div>
+  <br><br><br><br><br><br><br><br><br><br>
 </body>
+
 </html>
