--- a/sambaqui.html
+++ b/sambaqui.html
@@ -15,7 +15,7 @@
 <body>
   <div class="cabeçalho">
     <a href="index.html">
-      <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
+      <h1 class="center"><strong class="cabeca"> Física Na Mente </strong></h1>
     </a>
 
     <div id="mySidebar" class="sidebar">
