--- a/Bibliografia.html
+++ b/Bibliografia.html
@@ -15,7 +15,7 @@
 <body>
   <div class="cabeçalho">
     <div class="center">
-    <a href="index.html"> <h1 class="center"><strong class="cabeça"> Física Na Mente </strong></h1></a>
+      <h1 class="center"><strong class="cabeca"> Física Na Mente </strong></h1>
   </div>
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
