--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -14,7 +14,7 @@
 
 <body> 
   <div class="cabeçalho">
-    <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
+    <h1 class="center"><strong class="cabeca"> Física Na Mente </strong></h1>
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
       <h1 style="text-align: center;">Tópicos</h1>
