--- a/TermoFisica.html
+++ b/TermoFisica.html
@@ -15,7 +15,7 @@
 <body>
 
   <div class="cabeçalho">
-    <a href="index.html"> <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1></a>
+    <h1 class="center"><strong class="cabeca"> Física Na Mente </strong></h1>
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
       <h1 style="text-align: center;">Tópicos</h1>
