--- a/index.html
+++ b/index.html
@@ -170,13 +170,14 @@
   </div>
   <br><br><br><br><br><br><br><br><br><br>
   </div>
-  <div class="caixas" style="display: flex;">
+  <div class="caixas">
     <div id="caixa1">
       <strong class="cabeca1">Porque Você Deve Estudar Física?</strong>
       <br>
       <br>
       <p class="caixas">Primeira é pra não ser idiota, e segundo porque a física é muito massa</p>
     </div>
+    <br>
     <div id="caixa2">
       <strong class="cabeca1"> Quais os Principais Assuntos do Site?</strong>
       <br><br>
@@ -189,7 +190,9 @@
       <p class="caixas">TermoFísica</p>
       <p class="caixas">Optica</p>
     </div>
+    <br>
     <div id="caixa3"><strong class="cabeca1">So pra encher linguiça</strong></div>
+     <br>
     <div id="caixa4"><strong class="cabeca1">Quem Fez o Site?</strong>
       <br><br>
       <p class="caixas">
@@ -210,8 +213,8 @@
   <br>
   <div class="imagemEs">
     <div class="texto1">
-       <img src="Imagens/einsten.gif" alt="" style="border: none;  margin-left: 2cm;">
-     <h1> <strong class="cabeca"> Vou te mostrar que Fisica não é chata! </strong>
+       <img src="Imagens/einsten.gif" alt="" style="border: none;  margin-left: 1cm;">
+     <h1> <strong class="cabeca2"> Vou te mostrar que Fisica não é chata! </strong>
     <p>ESCREVER ALGO AQUI</p>
     </h1>
     </div>
@@ -219,7 +222,7 @@
     <div class="imagemDi">
       <div class="texto2">
         
-        <h1><strong class="cabeca">OLA OLA</strong></h1>
+        <h1><strong class="cabeca2">OLA OLA</strong></h1>
 
       </div>
     </div>
