Mais é o carai memo em

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     </div>
     <br>
     <div id="caixa3"><strong class="cabeca1">So pra encher linguiça</strong></div>
-     <br>
+    <br>
     <div id="caixa4"><strong class="cabeca1">Quem Fez o Site?</strong>
       <br><br>
       <p class="caixas">
@@ -213,15 +213,19 @@
   <br>
   <div class="imagemEs">
     <div class="texto1">
-       <img src="Imagens/einsten.gif" alt="" style="border: none;  margin-left: 1cm;">
-     <h1> <strong class="cabeca2"> Vou te mostrar que Fisica não é chata! </strong>
-    <p>ESCREVER ALGO AQUI</p>
-    </h1>
+      <img src="Imagens/einsten.gif" width="30%" alt="" style="border: none;  margin-left: 1cm;">
+      <h1> <strong class="cabeca2"> Vou </strong>
+        <h1> <strong class="cabeca2"> te </strong>
+          <h1> <strong class="cabeca2"> mostrar </strong>
+            <h1> <strong class="cabeca2"> Fisica </strong>
+              <h1> <strong class="cabeca2"> não </strong>
+                <h1> <strong class="cabeca2"> é </strong>
+                  <h1> <strong class="cabeca2"> chata! </strong>
     </div>
     <br>
     <div class="imagemDi">
       <div class="texto2">
-        
+
         <h1><strong class="cabeca2">OLA OLA</strong></h1>
 
       </div>
