--- a/index.html
+++ b/index.html
@@ -168,7 +168,6 @@
       </button></a>
   </div>
   </div>
-  <br><br><br><br><br><br><br><br><br><br>
   </div>
   <div class="caixas">
     <div id="caixa1">
@@ -180,7 +179,7 @@
     <br>
     <div id="caixa2">
       <strong class="cabeca1"> Quais os Principais Assuntos do Site?</strong>
-      <br><br>
+      <br><br><br>
       <p class="caixas">Ondas</p>
       <p class="caixas">Leis de Newton</p>
       <p class="caixas">Energia</p>
@@ -191,37 +190,54 @@
       <p class="caixas">Optica</p>
     </div>
     <br>
-    <div id="caixa3"><strong class="cabeca1">So pra encher linguiça</strong></div>
-    <br>
     <div id="caixa4"><strong class="cabeca1">Quem Fez o Site?</strong>
-      <br><br>
-      <p class="caixas">
-        Anthony Gabriel
-      </p>
-      <p class="caixas">
-        Claudio Anzini
-      </p>
-      <p class="caixas">
-        Gustavo Kruger
-      </p>
-      <p class="caixas">
-        Pedro Hen Malaquias
-      </p>
+      <div id="center">
+        <br><br>
+        <p class="caixas">
+          Anthony Gabriel Loche dos Reis
+        </p>
+        <br>
+        <p class="caixas">
+          Claudio Anzini Neto
+        </p>
+        <br>
+        <p class="caixas">
+          Gustavo Correa Kruger
+        </p>
+        <br>
+        <p class="caixas">
+          Pedro Henrique da Silva Malaquias
+        </p>
+      </div>
     </div>
   </div>
   <br><br><br><br><br><br>
   <br>
   <div class="imagemEs">
     <div class="texto1">
-      <img src="Imagens/einsten.gif" width="30%" alt="" style="border: none;  margin-left: 1cm;">
-      <h1> <strong class="cabeca2"> Vou </strong>
-        <h1> <strong class="cabeca2"> te </strong>
-          <h1> <strong class="cabeca2"> mostrar </strong>
-            <h1> <strong class="cabeca2"> Fisica </strong>
-              <h1> <strong class="cabeca2"> não </strong>
-                <h1> <strong class="cabeca2"> é </strong>
-                  <h1> <strong class="cabeca2"> chata! </strong>
+      
+      
+      <img src="Imagens/einsten.gif" alt="" class="veio">
+      <div class="display: grid">
+      <h1><strong class="cabeca2"> Vou Te Mostrar Que Física Não É Chata!</strong></h1>
+      <br>
+      <p class="textos">A física é uma ciência fascinante que nos permite compreender as leis fundamentais da natureza e
+        explorar os segredos do universo. Ela abrange desde o movimento dos planetas até as partículas subatômicas.
+        Além disso, a física está presente em nossa vida cotidiana, sendo responsável por tecnologias inovadoras como
+        eletricidade, mecânica automotiva e computação.
+      </p>
+      <br>
+      <p class="textos">Ao
+        estudar física, podemos desvendar fenômenos surpreendentes como gravidade, eletromagnetismo e mecânica quântica.
+      </p>
+      <br>
+      <p class="textos"> A física promove a criatividade e o pensamento crítico, ou seja, a criação/formulação de
+        hipóteses científicas,
+        a experimentação e a análise de dados. A física está em constante evolução, com novas teorias e descobertas que
+        desafiam constantemente o nosso conhecimento.</p>
+        <br>
     </div>
+  </div>
     <br>
     <div class="imagemDi">
       <div class="texto2">
