--- a/index.html
+++ b/index.html
@@ -211,43 +211,57 @@
       </div>
     </div>
   </div>
-  <br><br><br><br><br><br>
+  <div class="espaco">
+
+  </div>
   <br>
   <div class="imagemEs">
     <div class="texto1">
-      
-      
+
+
       <img src="Imagens/einsten.gif" alt="" class="veio">
       <div class="display: grid">
-      <h1><strong class="cabeca2"> Vou Te Mostrar Que Física Não É Chata!</strong></h1>
-      <br>
-      <p class="textos">A física é uma ciência fascinante que nos permite compreender as leis fundamentais da natureza e
-        explorar os segredos do universo. Ela abrange desde o movimento dos planetas até as partículas subatômicas.
-        Além disso, a física está presente em nossa vida cotidiana, sendo responsável por tecnologias inovadoras como
-        eletricidade, mecânica automotiva e computação.
-      </p>
-      <br>
-      <p class="textos">Ao
-        estudar física, podemos desvendar fenômenos surpreendentes como gravidade, eletromagnetismo e mecânica quântica.
-      </p>
-      <br>
-      <p class="textos"> A física promove a criatividade e o pensamento crítico, ou seja, a criação/formulação de
-        hipóteses científicas,
-        a experimentação e a análise de dados. A física está em constante evolução, com novas teorias e descobertas que
-        desafiam constantemente o nosso conhecimento.</p>
+        <h1><strong class="cabeca2"> Vou Te Mostrar Que Física Não É Chata!</strong></h1>
         <br>
-    </div>
-  </div>
-    <br>
-    <div class="imagemDi">
-      <div class="texto2">
-
-        <h1><strong class="cabeca2">OLA OLA</strong></h1>
-
+        <p class="textos">A física é uma ciência fascinante que nos permite compreender as leis fundamentais da natureza
+          e
+          explorar os segredos do universo. Ela abrange desde o movimento dos planetas até as partículas subatômicas.
+          Além disso, a física está presente em nossa vida cotidiana, sendo responsável por tecnologias inovadoras como
+          eletricidade, mecânica automotiva e computação.
+        </p>
+        <br>
+        <p class="textos">Ao
+          estudar física, podemos desvendar fenômenos surpreendentes como gravidade, eletromagnetismo e mecânica
+          quântica.
+        </p>
+        <br>
+        <p class="textos"> A física promove a criatividade e o pensamento crítico, ou seja, a criação/formulação de
+          hipóteses científicas,
+          a experimentação e a análise de dados. A física está em constante evolução, com novas teorias e descobertas
+          que
+          desafiam constantemente o nosso conhecimento.</p>
+        <br>
       </div>
     </div>
+    <br>
+
+    <div class="texto2">
+      <div class="gato">
+        <h1><strong class="cabeca2">Continuando...</strong></h1>
+
+        <p class="textos2">Portanto , a física é uma ciência incrível e emocionante, cheia de descobertas e
+          possibilidades, oferecendo uma visão profunda sobre nosso universo e nos convidando a desvendar mistérios do
+          nosso mundo, desenvolvendo nosso pensamento e nos fazendo crescer como seres racionais.
+          Enfim, a física é de suma importância para o desenvolvimento da nossa sociedade atual, contribuindo para
+          basicamente todas as outras ciências atuais.
+        </p>
+        <br>
+      </div>
+      <img src="Imagens/sweet-dreams.gif" class="FelixCatus" alt="">
+
+    </div>
   </div>
-  <br><br><br><br><br><br><br><br><br><br>
+  <div class="espaco"></div>
 </body>
 
 </html>
