--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
     <br>
   </div>
   </div>
+  </div><div class="espaco1">
+
   </div>
   <div class="caixas">
     <div id="caixa1">
@@ -206,7 +208,7 @@
       </div>
     </div>
   </div>
-  <div class="espaco">
+  <div class="espaco1">
 
   </div>
   <br>
@@ -242,8 +244,8 @@
 
     <div class="texto2">
       <div class="gato">
-        <h1><strong class="cabeca2">Continuando...</strong></h1>
-
+        <h1><strong class="cabeca22">Continuando...</strong></h1>
+<br>
         <p class="textos2">Portanto , a física é uma ciência incrível e emocionante, cheia de descobertas e
           possibilidades, oferecendo uma visão profunda sobre nosso universo e nos convidando a desvendar mistérios do
           nosso mundo, desenvolvendo nosso pensamento e nos fazendo crescer como seres racionais.
