--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
       <strong class="cabeca1">Porque Você Deve Estudar Física?</strong>
       <br>
       <br>
-      <p class="caixas">Primeira é pra não ser idiota, e segundo porque a física é muito massa</p>
+      <p class="caixas">
+        Estudar física é uma porta para desvendar os segredos do universo. Através dela, compreendemos as leis que regem a natureza, desde o movimento dos astros até o comportamento das partículas subatômicas. </p>
     </div>
     <br>
     <div id="caixa2">
