--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
     <h1 style="font-size: 70px;"> O Melhor Site Para Você Aprender Física</h1>
     <div id="center">
       <br>
-      <a href="Leis De Newton.html">
-        <button type="button" class="btn1" style="width: 300px;">
-          <strong style="font-size: 20px;">Definição de Física</strong>
-        </button></a>
+      <button type="button" class="btn1" style="width: 300px;" onclick="click_starwars();">
+        <strong style="font-size: 20px;">Definição de Física</strong>
+      </button>
     </div>
     <br>
   </div>
   </div>
-  </div><div class="espaco1">
+  </div>
+  <div class="espaco1">
 
   </div>
   <div class="caixas">
@@ -172,7 +172,8 @@
       <br>
       <br>
       <p class="caixas">
-        Estudar física é uma porta para desvendar os segredos do universo. Através dela, compreendemos as leis que regem a natureza, desde o movimento dos astros até o comportamento das partículas subatômicas. </p>
+        Estudar física é uma porta para desvendar os segredos do universo. Através dela, compreendemos as leis que regem
+        a natureza, desde o movimento dos astros até o comportamento das partículas subatômicas. </p>
     </div>
     <br>
     <div id="caixa2">
@@ -246,7 +247,7 @@
     <div class="texto2">
       <div class="gato">
         <h1><strong class="cabeca22">Continuando...</strong></h1>
-<br>
+        <br>
         <p class="textos2">Portanto , a física é uma ciência incrível e emocionante, cheia de descobertas e
           possibilidades, oferecendo uma visão profunda sobre nosso universo e nos convidando a desvendar mistérios do
           nosso mundo, desenvolvendo nosso pensamento e nos fazendo crescer como seres racionais.
@@ -261,6 +262,10 @@
   </div>
   <div class="espaco"></div>
   <div class="rodape"></div>
+
+  <div id="magica"></div>
+
+  </div>
 </body>
 
 </html>
